搭建源码阅读环境

--- a/pom.xml
+++ b/pom.xml
@@ -449,6 +449,7 @@
     <module>transport-blockhound-tests</module>
     <module>microbench</module>
     <module>bom</module>
+      <module>netty-demo</module>
   </modules>
 
   <dependencyManagement>
