--- a/netty-demo/pom.xml
+++ b/netty-demo/pom.xml
@@ -12,4 +12,19 @@
     <artifactId>netty-demo</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport</artifactId>
+            <version>4.1.59.Final-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.18</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
