--- a/netty-demo/pom.xml
+++ b/netty-demo/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>netty-transport</artifactId>
             <version>4.1.59.Final-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec</artifactId>
+            <version>4.1.59.Final-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
