--- a/netty-demo/pom.xml
+++ b/netty-demo/pom.xml
@@ -10,6 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>netty-demo</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
     <dependencies>
@@ -23,6 +35,13 @@
             <artifactId>netty-codec</artifactId>
             <version>4.1.59.Final-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http</artifactId>
+            <version>4.1.59.Final-SNAPSHOT</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
